// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Manager who has reportees & metrics 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-447 MuiPaper-elevation4-453 MuiPaper-rounded-448 MUIDataTable-paper-441 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-484 MuiToolbar-regular-486 MuiToolbar-gutters-485 MUIDataTableToolbar-root-474"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-475"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-477"
        >
          <h6
            className="MuiTypography-root-488 MuiTypography-h6-505 MUIDataTableToolbar-titleText-478"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-476"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-538 MuiIconButton-root-532 MUIDataTableToolbar-icon-479"
          data-testid="Search-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-537"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-541"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-652"
          />
        </button>
        <span
          onClick={[Function]}
        >
          <button
            aria-describedby={null}
            aria-label="Filter Table"
            className="MuiButtonBase-root-538 MuiIconButton-root-532 MUIDataTableToolbar-icon-479"
            data-testid="Filter Table-iconButton"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Filter Table"
            type="button"
          >
            <span
              className="MuiIconButton-label-537"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-541"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-652"
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-553"
    />
    <div
      className="MUIDataTable-responsiveStacked-444"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-555 MUIDataTable-tableRoot-442"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-445"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-558 MUIDataTableHead-responsiveStacked-557 MUIDataTableHead-main-556"
        >
          <tr
            className="MuiTableRow-root-560 MuiTableRow-head-563 MUIDataTableHeadRow-root-559"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-head-586 MUIDataTableHeadCell-root-574 MUIDataTableHeadCell-fixedHeader-575"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-582"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-578"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-579"
                >
                  <span
                    className="MuiButtonBase-root-538 MuiTableSortLabel-root-597 MUIDataTableHeadCell-sortLabelRoot-580"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-head-586 MUIDataTableHeadCell-root-574 MUIDataTableHeadCell-fixedHeader-575"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-582"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-578"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-579"
                >
                  <span
                    className="MuiButtonBase-root-538 MuiTableSortLabel-root-597 MUIDataTableHeadCell-sortLabelRoot-580"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-head-586 MUIDataTableHeadCell-root-574 MUIDataTableHeadCell-fixedHeader-575"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-582"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-578"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-579"
                >
                  <span
                    className="MuiButtonBase-root-538 MuiTableSortLabel-root-597 MUIDataTableHeadCell-sortLabelRoot-580"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-head-586 MUIDataTableHeadCell-root-574 MUIDataTableHeadCell-fixedHeader-575"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-582"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-578"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-579"
                >
                  <span
                    className="MuiButtonBase-root-538 MuiTableSortLabel-root-597 MUIDataTableHeadCell-sortLabelRoot-580"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-head-586 MUIDataTableHeadCell-root-574 MUIDataTableHeadCell-fixedHeader-575"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-582"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-578"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-579"
                >
                  <span
                    className="MuiButtonBase-root-538 MuiTableSortLabel-root-597 MUIDataTableHeadCell-sortLabelRoot-580"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-head-586 MUIDataTableHeadCell-root-574 MUIDataTableHeadCell-fixedHeader-575"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-582"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-578"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-579"
                >
                  <span
                    className="MuiButtonBase-root-538 MuiTableSortLabel-root-597 MUIDataTableHeadCell-sortLabelRoot-580"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-604"
        >
          <tr
            className="MuiTableRow-root-560 MuiTableRow-hover-562 MUIDataTableBodyRow-root-605 MUIDataTableBodyRow-hover-606 MUIDataTableBodyRow-responsiveStacked-608"
            data-testid="MUIDataTableBodyRow-0"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-cellHide-610 MUIDataTableBodyCell-cellStacked-611"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-responsiveStacked-612"
              data-testid="MuiDataTableBodyCell-0-0"
              onClick={[Function]}
            >
              Someone
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-cellHide-610 MUIDataTableBodyCell-cellStacked-611"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-responsiveStacked-612"
              data-testid="MuiDataTableBodyCell-1-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-cellHide-610 MUIDataTableBodyCell-cellStacked-611"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-responsiveStacked-612"
              data-testid="MuiDataTableBodyCell-2-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-cellHide-610 MUIDataTableBodyCell-cellStacked-611"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-responsiveStacked-612"
              data-testid="MuiDataTableBodyCell-3-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="https://mozilla.org/1"
                rel="noopener noreferrer"
                target="_blank"
              >
                1
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-cellHide-610 MUIDataTableBodyCell-cellStacked-611"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-responsiveStacked-612"
              data-testid="MuiDataTableBodyCell-4-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-cellHide-610 MUIDataTableBodyCell-cellStacked-611"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-585 MuiTableCell-body-587 MUIDataTableBodyCell-root-609 MUIDataTableBodyCell-responsiveStacked-612"
              data-testid="MuiDataTableBodyCell-5-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-555"
    >
      <tfoot
        className="MuiTableFooter-root-616"
      >
        <tr
          className="MuiTableRow-root-560 MuiTableRow-footer-564"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-585 MuiTableCell-footer-588 MUIDataTablePagination-root-613"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-484 MuiToolbar-regular-486 MuiToolbar-gutters-485 MuiTablePagination-toolbar-618 MUIDataTablePagination-toolbar-614"
            >
              <div
                className="MuiTablePagination-spacer-619"
              />
              <span
                className="MuiTypography-root-488 MuiTypography-caption-498 MuiTypography-colorInherit-517 MuiTablePagination-caption-620"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-634 MuiTablePagination-input-624"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-627 MuiTablePagination-selectRoot-621 MUIDataTablePagination-selectRoot-615"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-628 MuiTablePagination-select-622 MuiSelect-selectMenu-631 MuiInputBase-input-644"
                    data-testid="pagination-rows"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={25}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-541 MuiSelect-icon-633 MuiTablePagination-selectIcon-623"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-488 MuiTypography-caption-498 MuiTypography-colorInherit-517 MuiTablePagination-caption-620"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-626"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-538 MuiButtonBase-disabled-539 MuiIconButton-root-532 MuiIconButton-colorInherit-533 MuiIconButton-disabled-536"
                  data-testid="pagination-back"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-537"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-541"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-538 MuiButtonBase-disabled-539 MuiIconButton-root-532 MuiIconButton-colorInherit-533 MuiIconButton-disabled-536"
                  data-testid="pagination-next"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-537"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-541"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-446"
    />
  </div>
</div>
`;

exports[`renders Manager who has reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-228 MuiPaper-elevation4-234 MuiPaper-rounded-229 MUIDataTable-paper-222 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-265 MuiToolbar-regular-267 MuiToolbar-gutters-266 MUIDataTableToolbar-root-255"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-256"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-258"
        >
          <h6
            className="MuiTypography-root-269 MuiTypography-h6-286 MUIDataTableToolbar-titleText-259"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-257"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-319 MuiIconButton-root-313 MUIDataTableToolbar-icon-260"
          data-testid="Search-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-318"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-322"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-433"
          />
        </button>
        <span
          onClick={[Function]}
        >
          <button
            aria-describedby={null}
            aria-label="Filter Table"
            className="MuiButtonBase-root-319 MuiIconButton-root-313 MUIDataTableToolbar-icon-260"
            data-testid="Filter Table-iconButton"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Filter Table"
            type="button"
          >
            <span
              className="MuiIconButton-label-318"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-322"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-433"
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-334"
    />
    <div
      className="MUIDataTable-responsiveStacked-225"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-336 MUIDataTable-tableRoot-223"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-226"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-339 MUIDataTableHead-responsiveStacked-338 MUIDataTableHead-main-337"
        >
          <tr
            className="MuiTableRow-root-341 MuiTableRow-head-344 MUIDataTableHeadRow-root-340"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-head-367 MUIDataTableHeadCell-root-355 MUIDataTableHeadCell-fixedHeader-356"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-363"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-359"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-360"
                >
                  <span
                    className="MuiButtonBase-root-319 MuiTableSortLabel-root-378 MUIDataTableHeadCell-sortLabelRoot-361"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-head-367 MUIDataTableHeadCell-root-355 MUIDataTableHeadCell-fixedHeader-356"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-363"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-359"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-360"
                >
                  <span
                    className="MuiButtonBase-root-319 MuiTableSortLabel-root-378 MUIDataTableHeadCell-sortLabelRoot-361"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-head-367 MUIDataTableHeadCell-root-355 MUIDataTableHeadCell-fixedHeader-356"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-363"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-359"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-360"
                >
                  <span
                    className="MuiButtonBase-root-319 MuiTableSortLabel-root-378 MUIDataTableHeadCell-sortLabelRoot-361"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-head-367 MUIDataTableHeadCell-root-355 MUIDataTableHeadCell-fixedHeader-356"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-363"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-359"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-360"
                >
                  <span
                    className="MuiButtonBase-root-319 MuiTableSortLabel-root-378 MUIDataTableHeadCell-sortLabelRoot-361"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-head-367 MUIDataTableHeadCell-root-355 MUIDataTableHeadCell-fixedHeader-356"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-363"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-359"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-360"
                >
                  <span
                    className="MuiButtonBase-root-319 MuiTableSortLabel-root-378 MUIDataTableHeadCell-sortLabelRoot-361"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-head-367 MUIDataTableHeadCell-root-355 MUIDataTableHeadCell-fixedHeader-356"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-363"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-359"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-360"
                >
                  <span
                    className="MuiButtonBase-root-319 MuiTableSortLabel-root-378 MUIDataTableHeadCell-sortLabelRoot-361"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-385"
        >
          <tr
            className="MuiTableRow-root-341 MuiTableRow-hover-343 MUIDataTableBodyRow-root-386 MUIDataTableBodyRow-hover-387 MUIDataTableBodyRow-responsiveStacked-389"
            data-testid="MUIDataTableBodyRow-0"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-cellHide-391 MUIDataTableBodyCell-cellStacked-392"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-responsiveStacked-393"
              data-testid="MuiDataTableBodyCell-0-0"
              onClick={[Function]}
            >
              Someone
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-cellHide-391 MUIDataTableBodyCell-cellStacked-392"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-responsiveStacked-393"
              data-testid="MuiDataTableBodyCell-1-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-cellHide-391 MUIDataTableBodyCell-cellStacked-392"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-responsiveStacked-393"
              data-testid="MuiDataTableBodyCell-2-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-cellHide-391 MUIDataTableBodyCell-cellStacked-392"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-responsiveStacked-393"
              data-testid="MuiDataTableBodyCell-3-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-cellHide-391 MUIDataTableBodyCell-cellStacked-392"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-responsiveStacked-393"
              data-testid="MuiDataTableBodyCell-4-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-cellHide-391 MUIDataTableBodyCell-cellStacked-392"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-366 MuiTableCell-body-368 MUIDataTableBodyCell-root-390 MUIDataTableBodyCell-responsiveStacked-393"
              data-testid="MuiDataTableBodyCell-5-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-336"
    >
      <tfoot
        className="MuiTableFooter-root-397"
      >
        <tr
          className="MuiTableRow-root-341 MuiTableRow-footer-345"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-366 MuiTableCell-footer-369 MUIDataTablePagination-root-394"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-265 MuiToolbar-regular-267 MuiToolbar-gutters-266 MuiTablePagination-toolbar-399 MUIDataTablePagination-toolbar-395"
            >
              <div
                className="MuiTablePagination-spacer-400"
              />
              <span
                className="MuiTypography-root-269 MuiTypography-caption-279 MuiTypography-colorInherit-298 MuiTablePagination-caption-401"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-415 MuiTablePagination-input-405"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-408 MuiTablePagination-selectRoot-402 MUIDataTablePagination-selectRoot-396"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-409 MuiTablePagination-select-403 MuiSelect-selectMenu-412 MuiInputBase-input-425"
                    data-testid="pagination-rows"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={25}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-322 MuiSelect-icon-414 MuiTablePagination-selectIcon-404"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-269 MuiTypography-caption-279 MuiTypography-colorInherit-298 MuiTablePagination-caption-401"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-407"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-319 MuiButtonBase-disabled-320 MuiIconButton-root-313 MuiIconButton-colorInherit-314 MuiIconButton-disabled-317"
                  data-testid="pagination-back"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-318"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-322"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-319 MuiButtonBase-disabled-320 MuiIconButton-root-313 MuiIconButton-colorInherit-314 MuiIconButton-disabled-317"
                  data-testid="pagination-next"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-318"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-322"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-227"
    />
  </div>
</div>
`;

exports[`renders Someone with no reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <div
    className="MuiPaper-root-9 MuiPaper-elevation4-15 MuiPaper-rounded-10 MUIDataTable-paper-3 reportees-table"
  >
    <div
      aria-label="Table Toolbar"
      className="MuiToolbar-root-46 MuiToolbar-regular-48 MuiToolbar-gutters-47 MUIDataTableToolbar-root-36"
      role="toolbar"
    >
      <div
        className="MUIDataTableToolbar-left-37"
      >
        <div
          aria-hidden="true"
          className="MUIDataTableToolbar-titleRoot-39"
        >
          <h6
            className="MuiTypography-root-50 MuiTypography-h6-67 MUIDataTableToolbar-titleText-40"
          >
            Reportees
          </h6>
        </div>
      </div>
      <div
        className="MUIDataTableToolbar-actions-38"
      >
        <button
          aria-describedby={null}
          aria-label="Search"
          className="MuiButtonBase-root-100 MuiIconButton-root-94 MUIDataTableToolbar-icon-41"
          data-testid="Search-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          title="Search"
          type="button"
        >
          <span
            className="MuiIconButton-label-99"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-103"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-214"
          />
        </button>
        <span
          onClick={[Function]}
        >
          <button
            aria-describedby={null}
            aria-label="Filter Table"
            className="MuiButtonBase-root-100 MuiIconButton-root-94 MUIDataTableToolbar-icon-41"
            data-testid="Filter Table-iconButton"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Filter Table"
            type="button"
          >
            <span
              className="MuiIconButton-label-99"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-103"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-214"
            />
          </button>
        </span>
      </div>
    </div>
    <div
      className="MUIDataTableFilterList-root-115"
    />
    <div
      className="MUIDataTable-responsiveStacked-6"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <table
        className="MuiTable-root-117 MUIDataTable-tableRoot-4"
        role="grid"
        tabIndex="0"
      >
        <caption
          className="MUIDataTable-caption-7"
        >
          Reportees
        </caption>
        <thead
          className="MuiTableHead-root-120 MUIDataTableHead-responsiveStacked-119 MUIDataTableHead-main-118"
        >
          <tr
            className="MuiTableRow-root-122 MuiTableRow-head-125 MUIDataTableHeadRow-root-121"
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-head-148 MUIDataTableHeadCell-root-136 MUIDataTableHeadCell-fixedHeader-137"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-144"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-140"
                >
                  Full Name
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-141"
                >
                  <span
                    className="MuiButtonBase-root-100 MuiTableSortLabel-root-159 MUIDataTableHeadCell-sortLabelRoot-142"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-head-148 MUIDataTableHeadCell-root-136 MUIDataTableHeadCell-fixedHeader-137"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-144"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-140"
                >
                  Assigned (defect)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-141"
                >
                  <span
                    className="MuiButtonBase-root-100 MuiTableSortLabel-root-159 MUIDataTableHeadCell-sortLabelRoot-142"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-head-148 MUIDataTableHeadCell-root-136 MUIDataTableHeadCell-fixedHeader-137"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-144"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-140"
                >
                  Assigned (total)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-141"
                >
                  <span
                    className="MuiButtonBase-root-100 MuiTableSortLabel-root-159 MUIDataTableHeadCell-sortLabelRoot-142"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-head-148 MUIDataTableHeadCell-root-136 MUIDataTableHeadCell-fixedHeader-137"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-144"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-140"
                >
                  Needinfo
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-141"
                >
                  <span
                    className="MuiButtonBase-root-100 MuiTableSortLabel-root-159 MUIDataTableHeadCell-sortLabelRoot-142"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-head-148 MUIDataTableHeadCell-root-136 MUIDataTableHeadCell-fixedHeader-137"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-144"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-140"
                >
                  Assigned & Tracked (Beta)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-141"
                >
                  <span
                    className="MuiButtonBase-root-100 MuiTableSortLabel-root-159 MUIDataTableHeadCell-sortLabelRoot-142"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-head-148 MUIDataTableHeadCell-root-136 MUIDataTableHeadCell-fixedHeader-137"
              scope="col"
            >
              <span
                aria-describedby={null}
                className="MUIDataTableHeadCell-toolButton-144"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex={0}
                title="Sort"
              >
                <div
                  className="MUIDataTableHeadCell-data-140"
                >
                  Assigned & Tracked (Nightly)
                </div>
                <div
                  className="MUIDataTableHeadCell-sortAction-141"
                >
                  <span
                    className="MuiButtonBase-root-100 MuiTableSortLabel-root-159 MUIDataTableHeadCell-sortLabelRoot-142"
                    onBlur={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                  />
                </div>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root-166"
        >
          <tr
            className="MuiTableRow-root-122 MuiTableRow-hover-124 MUIDataTableBodyRow-root-167 MUIDataTableBodyRow-hover-168 MUIDataTableBodyRow-responsiveStacked-170"
            data-testid="MUIDataTableBodyRow-0"
            id="MUIDataTableBodyRow-0"
            onClick={[Function]}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-cellHide-172 MUIDataTableBodyCell-cellStacked-173"
            >
              Full Name
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-responsiveStacked-174"
              data-testid="MuiDataTableBodyCell-0-0"
              onClick={[Function]}
            >
              Manager
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-cellHide-172 MUIDataTableBodyCell-cellStacked-173"
            >
              Assigned (defect)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-responsiveStacked-174"
              data-testid="MuiDataTableBodyCell-1-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-cellHide-172 MUIDataTableBodyCell-cellStacked-173"
            >
              Assigned (total)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-responsiveStacked-174"
              data-testid="MuiDataTableBodyCell-2-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-cellHide-172 MUIDataTableBodyCell-cellStacked-173"
            >
              Needinfo
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-responsiveStacked-174"
              data-testid="MuiDataTableBodyCell-3-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-cellHide-172 MUIDataTableBodyCell-cellStacked-173"
            >
              Assigned & Tracked (Beta)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-responsiveStacked-174"
              data-testid="MuiDataTableBodyCell-4-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-cellHide-172 MUIDataTableBodyCell-cellStacked-173"
            >
              Assigned & Tracked (Nightly)
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root-147 MuiTableCell-body-149 MUIDataTableBodyCell-root-171 MUIDataTableBodyCell-responsiveStacked-174"
              data-testid="MuiDataTableBodyCell-5-0"
              onClick={[Function]}
            >
              <a
                className=""
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <table
      className="MuiTable-root-117"
    >
      <tfoot
        className="MuiTableFooter-root-178"
      >
        <tr
          className="MuiTableRow-root-122 MuiTableRow-footer-126"
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root-147 MuiTableCell-footer-150 MUIDataTablePagination-root-175"
            colSpan={1000}
          >
            <div
              className="MuiToolbar-root-46 MuiToolbar-regular-48 MuiToolbar-gutters-47 MuiTablePagination-toolbar-180 MUIDataTablePagination-toolbar-176"
            >
              <div
                className="MuiTablePagination-spacer-181"
              />
              <span
                className="MuiTypography-root-50 MuiTypography-caption-60 MuiTypography-colorInherit-79 MuiTablePagination-caption-182"
              >
                Rows per page:
              </span>
              <div
                className="MuiInputBase-root-196 MuiTablePagination-input-186"
                onClick={[Function]}
              >
                <div
                  className="MuiSelect-root-189 MuiTablePagination-selectRoot-183 MUIDataTablePagination-selectRoot-177"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    className="MuiSelect-select-190 MuiTablePagination-select-184 MuiSelect-selectMenu-193 MuiInputBase-input-206"
                    data-testid="pagination-rows"
                    id="pagination-rows"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </div>
                  <input
                    id="pagination-input"
                    type="hidden"
                    value={25}
                  />
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-103 MuiSelect-icon-195 MuiTablePagination-selectIcon-185"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="MuiTypography-root-50 MuiTypography-caption-60 MuiTypography-colorInherit-79 MuiTablePagination-caption-182"
              >
                1-1 of 1
              </span>
              <div
                className="MuiTablePagination-actions-188"
              >
                <button
                  aria-label="Previous Page"
                  className="MuiButtonBase-root-100 MuiButtonBase-disabled-101 MuiIconButton-root-94 MuiIconButton-colorInherit-95 MuiIconButton-disabled-98"
                  data-testid="pagination-back"
                  disabled={true}
                  id="pagination-back"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-99"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-103"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Next Page"
                  className="MuiButtonBase-root-100 MuiButtonBase-disabled-101 MuiIconButton-root-94 MuiIconButton-colorInherit-95 MuiIconButton-disabled-98"
                  data-testid="pagination-next"
                  disabled={true}
                  id="pagination-next"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-99"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-103"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      aria-live="polite"
      className="MUIDataTable-liveAnnounce-8"
    />
  </div>
</div>
`;
